force-app/main/default/objects/DD_SIC_Mapping__c/DD_SIC_Mapping__c.object-meta.xml
<CustomObject>
    <description>Maps SIC code ranges to rate levels and eligibility for the small business program</description>
    <label>SIC Mapping</label>
    <nameField><displayFormat>SIC-{00000}</displayFormat><label>Mapping ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>SIC Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>