force-app/main/default/objects/DD_SIC_Mapping__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Industry Description</label>
    <type>Text</type>
    <length>255</length><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Description of the industry</description>
</CustomField>