force-app/main/default/objects/DD_SIC_Mapping__c/fields/Eligible__c.field-meta.xml
<CustomField>
    <fullName>Eligible__c</fullName>
    <label>Eligible</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether SIC range is eligible for program</description>
</CustomField>