force-app/main/default/objects/DD_SIC_Mapping__c/fields/SIC_End__c.field-meta.xml
<CustomField>
    <fullName>SIC_End__c</fullName>
    <label>SIC Code End</label>
    <type>Text</type>
    <length>10</length><required>true</required><unique>false</unique><externalId>false</externalId>
    <description>End of SIC code range</description>
</CustomField>