force-app/main/default/objects/DD_SIC_Mapping__c/fields/SIC_Start__c.field-meta.xml
<CustomField>
    <fullName>SIC_Start__c</fullName>
    <label>SIC Code Start</label>
    <type>Text</type>
    <length>10</length><required>true</required><unique>false</unique><externalId>false</externalId>
    <description>Start of SIC code range</description>
</CustomField>