force-app/main/default/objects/DD_SIC_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>NAME</columns>
    <columns>SIC_Start__c</columns>
    <columns>SIC_End__c</columns>
    <columns>Rate_Level__c</columns>
    <columns>Eligible__c</columns>
    <columns>Description__c</columns>
</ListView>